[gd_scene load_steps=2 format=3 uid="uid://duhgm3aaupf15"]

[ext_resource type="Script" uid="uid://kgskilb2c4a3" path="res://scripts/Tutorial.gd" id="1"]

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="TutorialPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TutorialPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="TutorialPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "游戏教程"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="TutorialPanel/VBoxContainer"]
layout_mode = 2

[node name="StepLabel" type="Label" parent="TutorialPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "第1步"
horizontal_alignment = 1

[node name="InstructionLabel" type="Label" parent="TutorialPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "点击屏幕左侧向左移动
点击屏幕右侧向右移动"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="TutorialPanel/VBoxContainer"]
layout_mode = 2

[node name="HintLabel" type="Label" parent="TutorialPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "💡 提示：收集星星获得分数
⭐ 金色星星价值更高
❤️ 不要漏接星星，会失去生命"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator3" type="HSeparator" parent="TutorialPanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="TutorialPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PrevButton" type="Button" parent="TutorialPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "上一步"

[node name="NextButton" type="Button" parent="TutorialPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "下一步"

[node name="StartButton" type="Button" parent="TutorialPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "开始游戏"

[node name="TouchIndicator" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LeftArea" type="Panel" parent="TouchIndicator"]
modulate = Color(1, 1, 1, 0.8)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.65
anchor_bottom = 0.95
offset_right = 240.0
grow_vertical = 2
mouse_filter = 2

[node name="LeftLabel" type="Label" parent="TouchIndicator/LeftArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -40.0
offset_right = 60.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "👈 轻触左移"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightArea" type="Panel" parent="TouchIndicator"]
modulate = Color(1, 1, 1, 0.8)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.65
anchor_right = 1.0
anchor_bottom = 0.95
offset_left = -240.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2

[node name="RightLabel" type="Label" parent="TouchIndicator/RightArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -40.0
offset_right = 60.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "轻触右移 👉"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="TutorialPanel/VBoxContainer/ButtonContainer/PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="TutorialPanel/VBoxContainer/ButtonContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="TutorialPanel/VBoxContainer/ButtonContainer/StartButton" to="." method="_on_start_button_pressed"]
